CHANGES IN VERSION 1.1.9
------------------------
 o rotate function for ratating a clade by 180 degree <2015-07-01, Wed>
 o get_taxa_name function will return taxa name vector of a selected clade <2015-06-30, Tue>
 o add example of flip function in vignette <2015-06-30, Tue>
 o flip function for exchanging positions of two selected branches <2015-06-30, Tue>
 
CHANGES IN VERSION 1.1.8
------------------------
 o update get.placement <2015-06-05, Fri>
 o edgeNum2nodeNum for converting edge number to node number for EPA/pplacer output <2015-06-04, Thu>
 o mv scale_x_gheatmap to scale_x_ggtree, which also support msaplot <2015-06-02, Tue>
 o add mask function <2015-06-02, Tue>
 
CHANGES IN VERSION 1.1.7
------------------------
 o add example of msaplot in vignette <2015-05-22, Fri>
 o msaplot for adding multiple sequence alignment <2015-05-22, Fri>
 
CHANGES IN VERSION 1.1.6
------------------------
 o add vertical_only parameter to scaleClade and set to TRUE by default.
   only vertical will be scaled by default. <2015-05-22, Fri>
 o update add_colorbar & add_legend <2015-05-21, Thu>
 o add example of add_legend and gheatmap in vignette <2015-05-18, Mon> 
 o gheatmap implementation of gplot <2015-05-18, Mon>
 o add_legend for adding evolution distance legend <2015-05-18, Mon>
 
CHANGES IN VERSION 1.1.5
------------------------
 o implement scaleClade <2015-05-12, Tue>
 
CHANGES IN VERSION 1.1.4
------------------------
 o better performance of parsing beast tree  <2015-05-11, Mon>
   + support beast tree begin with 'tree tree_1 = ' and other forms.
   + support file that only contains one evidence for some of the nodes/tips
 o update add_colorbar to auto determine the position <2015-05-04, Mon>
 o add_colorbar function <2015-04-30, Thu>
 
CHANGES IN VERSION 1.1.3
------------------------
 o add space between residue substitution (e.g. K123R / E155D) <2015-04-30, Thu>
 o remove slash line in heatmap legend <2015-04-30, Thu>